style: add line-height to body to improve readability style: add dark navy color variable to use in components style: add mixin to set text color style: add styles for SummaryCardStatItem component style: add styles for SummaryCardStats component style: import SummaryCardStatItem styles in components index file fix(SummaryCardStatItem.tsx): change category switch statement to use colorMix variable instead of color variable feat(SummaryCardStatItem.tsx): add colorMix variable to use in SummaryCardStatItem component feat(SummaryCardStats.tsx): add continue button to SummaryCardStats component

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,6 +6,7 @@ html {
 
 body {
   font: var.$text-body var.$font-stack;
+  line-height: 2.3rem;
   background: var.$bg-white;
   min-height: 100vh;
 }
