--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -36,6 +36,8 @@ $bg-gradient-green-white: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(
   #00BB8F;
 $bg-gradient-blue-white: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)),
   #1125D6;
+$bg-dark-navy: #303b59;
+
 // $bg-gradient-red-white: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)),
 //   #FF5555;
 // $bg-gradient-yellow-white: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)),
